--- a/NCMS/Views/Prescriptions/Create.cshtml
+++ b/NCMS/Views/Prescriptions/Create.cshtml
@@ -635,7 +635,7 @@
 
                                 </div>
                             }
-                           else if (User.IsInRole("DrugUpload"))
+                           else if (User.IsInRole("Patient"))
                             {
                                 <div class="col-md-6">
                                     @using (Html.BeginForm())
