--- a/NCMS/Views/RequestDrugs/Edit.cshtml
+++ b/NCMS/Views/RequestDrugs/Edit.cshtml
@@ -413,7 +413,7 @@
                         if (User.IsInRole("Patient"))
                         {
                             <li>
-                                <a href="~/DashBoard">
+                                <a href="~/Dashboard">
                                     <div class="item-content">
                                         <div class="item-media">
                                             <i class="fa fa-university"></i>
@@ -426,14 +426,14 @@
                             </li>
 
                             <li>
-                                <a href="~/Appointments">
+                                <a href="~/RequestDrugs">
 
                                     <div class="item-content">
                                         <div class="item-media">
                                             <i class="fa fa-hospital-o" icon></i>
                                         </div>
                                         <div class="item-inner">
-                                            <span class="title"> Appointments </span>
+                                            <span class="title"> Order Drugs </span>
                                         </div>
                                     </div>
                                 </a>
@@ -445,25 +445,12 @@
                                             <i class="fa fa-medkit" icon></i>
                                         </div>
                                         <div class="item-inner">
-                                            <span class="title"> Drug Prescription </span>
+                                            <span class="title"> Drugs Inventory </span>
                                         </div>
                                     </div>
                                 </a>
                             </li>
 
-                            <li>
-
-                                <a href="~/Schedules">
-                                    <div class="item-content">
-                                        <div class="item-media">
-                                            <i class="fa fa-calendar" icon></i>
-                                        </div>
-                                        <div class="item-inner">
-                                            <span class="title"> Doctor's Schedule </span>
-                                        </div>
-                                    </div>
-                                </a>
-                            </li>
                         }
                     }
                     else
@@ -578,7 +565,7 @@
                             <div class="form-horizontal">
                                 @if (User.Identity.IsAuthenticated)
                                 {
-                                    if (User.IsInRole("Pharmacist"))
+                                    if (User.IsInRole("Pharmacist") || User.IsInRole("Nurse"))
                                     {
                                         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                                         @Html.HiddenFor(model => model.RequestID)
@@ -600,10 +587,10 @@
                                         </div>
 
                                         <div class="form-group">
-                                            @Html.LabelFor(model => model.Quantity, htmlAttributes: new { @class = "control-label col-md-2" })
+                                            @Html.LabelFor(model => model.QuantityReq, htmlAttributes: new { @class = "control-label col-md-2" })
                                             <div class="col-md-10">
-                                                @Html.EditorFor(model => model.Quantity, new { htmlAttributes = new { @class = "form-control", @readonly = "" } })
-                                                @Html.ValidationMessageFor(model => model.Quantity, "", new { @class = "text-danger" })
+                                                @Html.EditorFor(model => model.QuantityReq, new { htmlAttributes = new { @class = "form-control", @readonly = "" } })
+                                                @Html.ValidationMessageFor(model => model.QuantityReq, "", new { @class = "text-danger" })
                                             </div>
                                         </div>
 
@@ -628,6 +615,14 @@
                                             <div class="col-md-10">
                                                 @Html.EditorFor(model => model.Comment, new { htmlAttributes = new { @class = "form-control" } })
                                                 @Html.ValidationMessageFor(model => model.Comment, "", new { @class = "text-danger" })
+                                            </div>
+                                        </div>
+
+                                        <div class="form-group">
+                                            @Html.LabelFor(model => model.ReceivedDate, htmlAttributes: new { @class = "control-label col-md-2" })
+                                            <div class="col-md-10">
+                                                @Html.EditorFor(model => model.ReceivedDate, new { htmlAttributes = new { @class = "form-control" } })
+                                                @Html.ValidationMessageFor(model => model.ReceivedDate, "", new { @class = "text-danger" })
                                             </div>
                                         </div>
 
@@ -661,10 +656,10 @@
                                         </div>
 
                                         <div class="form-group">
-                                            @Html.LabelFor(model => model.Quantity, htmlAttributes: new { @class = "control-label col-md-2" })
+                                            @Html.LabelFor(model => model.QuantityReq, htmlAttributes: new { @class = "control-label col-md-2" })
                                             <div class="col-md-10">
-                                                @Html.EditorFor(model => model.Quantity, new { htmlAttributes = new { @class = "form-control", @readonly = "" } })
-                                                @Html.ValidationMessageFor(model => model.Quantity, "", new { @class = "text-danger" })
+                                                @Html.EditorFor(model => model.QuantityReq, new { htmlAttributes = new { @class = "form-control", @readonly = "" } })
+                                                @Html.ValidationMessageFor(model => model.QuantityReq, "", new { @class = "text-danger" })
                                             </div>
                                         </div>
 
@@ -674,6 +669,14 @@
                                             <div class="col-md-10">
                                                 @Html.EditorFor(model => model.RequestBy, new { htmlAttributes = new { @class = "form-control", @readonly = "" } })
                                                 @Html.ValidationMessageFor(model => model.RequestBy, "", new { @class = "text-danger" })
+                                            </div>
+                                        </div>
+
+                                        <div class="form-group">
+                                            @Html.LabelFor(model => model.DispensedQuantity, htmlAttributes: new { @class = "control-label col-md-2" })
+                                            <div class="col-md-10">
+                                                @Html.EditorFor(model => model.DispensedQuantity, new { htmlAttributes = new { @class = "form-control" } })
+                                                @Html.ValidationMessageFor(model => model.DispensedQuantity, "", new { @class = "text-danger" })
                                             </div>
                                         </div>
 
@@ -692,6 +695,13 @@
                                             </div>
                                         </div>
 
+                                        <div class="form-group">
+                                            @Html.LabelFor(model => model.DispensedDate, htmlAttributes: new { @class = "control-label col-md-2" })
+                                            <div class="col-md-10">
+                                                @Html.EditorFor(model => model.DispensedDate, new { htmlAttributes = new { @class = "form-control" } })
+                                                @Html.ValidationMessageFor(model => model.DispensedDate, "", new { @class = "text-danger" })
+                                            </div>
+                                        </div>
 
 
                                         <div class="form-group">
